Update: naming methods